fix: reduce post list title font size on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -571,6 +571,12 @@ footer.sticky-bottom {
     }
 }
 
+@media (max-width: 768px) {
+    .post-list .post-title {
+        font-size: 1.4rem;
+    }
+}
+
 @media (max-width: 500px) {
     .post-title {
         font-size: 2rem;
